istio/authorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hotel
spec:	
  selector:
    matchLabels:
       app: hotel
  rules:
    - to:
        - operation:
            methods: [ "GET" ]
            paths: [ "/hotel" ]
    - to:
        - operation:
            methods: [ "GET" ]
            paths: [ "/hotel/hotels*" ]
      from:
        - source:
              requestPrincipals: [ "*" ]
      when:
        - key: request.auth.claims[realm_access][roles]
          values: [ "admin" ]
